--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@
 
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
+apply plugin: 'application'
+apply plugin: 'distribution'
+
+mainClassName = "HelloWorld"
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -21,10 +25,19 @@ repositories {
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
-
+    compile 'net.joningi:icndb-java-api:1.0'
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
+}
+jar {
+ manifest {
+ attributes("Main-Class": "HelloWorld")
+ }
+}
+
+task stage {
+	dependsOn installDist
 }
